[package]
name = "gstp"
version = "0.12.0"
edition = "2024"
description = "A secure, authenticated, transport-agnostic data exchange protocol with distributed state management via Encrypted State Continuations (ESC)."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/gstp-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/gstp"
keywords = ["cryptography"]                                                                                                                                   # Up to five
categories = ["cryptography"]                                                                                                                                 # https://crates.io/category_slugs

[dependencies]
dcbor = { version = "^0.24.1", features = ["multithreaded"] }
bc-rand = "^0.5.0"
bc-components = "^0.30.0"
bc-envelope = "^0.39.0"
bc-xid = "^0.18.0"

thiserror = "^2.0"

[dev-dependencies]
hex-literal = "^1.1.0"
indoc = "^2.0.0"
version-sync = "^0.9.0"
